--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.1",
     "@testing-library/user-event": "^12.2.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
+    "install": "^0.13.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
@@ -40,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react": "^11.2.6",
     "enzyme": "^3.11.0"
   }
 }
